--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "tests-frontend",
-  "private": true,
-  "sideEffects": false,
   "type": "module",
+  "private": true,
+  "packageManager": "pnpm@10.13.1",
+  "sideEffects": false,
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
@@ -26,15 +29,24 @@
     "zod": "^4.0.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.18.0",
+    "@eslint-react/eslint-plugin": "^1.52.3",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@tanstack/eslint-plugin-router": "^1.129.7",
     "@types/node": "^24.0.14",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.31.0",
+    "eslint-plugin-better-tailwindcss": "^3.7.2",
+    "eslint-plugin-format": "^1.0.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.4.1",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5.8.3",
     "vite": "^7.0.4",
     "vite-tsconfig-paths": "^5.1.4"
-  },
-  "packageManager": "pnpm@10.13.1"
+  }
 }
