--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3",
+    "unplugin-turbo-console": "^2.2.0",
     "vite": "^7.0.6",
+    "vite-plugin-checker": "^0.10.1",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
