--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "vite build && tsc --noEmit",
     "start": "node .output/server/index.mjs",
     "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "lint:fix": "eslint --fix",
+    "lint:fsd": "pnpx steiger ./src"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.19.0",
     "@eslint-react/eslint-plugin": "^1.52.6",
+    "@feature-sliced/steiger-plugin": "^0.5.7",
     "@tanstack/eslint-plugin-query": "^5.83.1",
     "@tanstack/eslint-plugin-router": "^1.131.2",
     "@tanstack/react-router-ssr-query": "^1.131.27",
@@ -49,6 +51,7 @@
     "eslint-plugin-react-you-might-not-need-an-effect": "^0.4.2",
     "lint-staged": "^16.1.5",
     "simple-git-hooks": "^2.13.1",
+    "steiger": "^0.5.11",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.0",
@@ -63,6 +66,7 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
       "pnpm tsc --noEmit",
+      "pnpx steiger ./src",
       "eslint --fix"
     ]
   }
