--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@tanstack/react-start": "^1.131.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "ky": "^1.9.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-query-kit": "^3.3.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.17"
@@ -64,8 +66,8 @@
     "pre-commit": "pnpx lint-staged"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "pnpm tsc --noEmit",
+    "./src/**/*.{js,jsx,ts,tsx}": [
+      "tsc --noEmit --skipLibCheck",
       "pnpx steiger ./src",
       "eslint --fix"
     ]
