--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "skipLibCheck": true
+
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"]
 }
